dev/scss/_main.scss
html, body {
  margin: 0;
  padding: 0;
  font-family: open-sans, sans-serif;
  font-style: normal;
  font-weight: 300;
}

a, a:hover, a:visited {
  text-decoration: none !important;
  color: inherit !important;
}

header.contact {
  background-color: $red;
  color: white;
  font-size: 16px;
  line-height: 40px;
  font-weight: 600;

  .quote {
    background-color: $darkblue;
    display: inline-block;
    text-transform: uppercase;
    font-style: italic;
    padding: 0 42px;
  }

  .phone {
    font-family: eurostile-extended, sans-serif;
    font-weight: 600;
    line-height: 38px;

    span {
      font-family: open-sans, sans-serif;
      font-style: normal;
      font-weight: 300;
      background-color: white;
      color: $red;
      height: 20px;
      font-size: 14px;
      vertical-align: top;
      border-radius: 5px;
      padding: 1px 4px;
    }
  }
}

header.navigation {
  #menu-navigation-menu {
    min-width: 376px;
  }

  .social-icons {
    a {
      margin: 2px;
    }
  }
}

footer.top-footer {
  font-family: eurostile, sans-serif;
  font-weight: 600;
  background-color: $blue;
  color: $lightblue;
  font-size: 30px;
  text-transform: uppercase;
  padding-bottom: 3px;
}

footer.navigation {
  background-color: $darkblue;
  color: white;

  a {
    color: white;
  }

  .social-icons {
    font-size: 24px;
    color: $lightblue;

    a {
      margin: 4px;
    }
  }

  .small {
    font-size: 10px;
  }
}

.waves {
  > div {
    min-height: 60px;
  }

  .blue {
    background-color: $darkblue;
  }

  .gray {
    background-color: $gray;
  }
}

.stripe {
  .row {
    min-height: 400px;
  }

  .text {
    > div {
      max-width: 400px;
    }

    .heading {
      font-family: eurostile, sans-serif;
      font-style: normal;
      font-weight: 400;
      font-size: 28px;
      line-height: 32px;
      color: $darkblue;
    }

    .body {
      font-family: open-sans, sans-serif;
      font-style: normal;
      font-weight: 300;
    }
  }

  .image {
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;

    img {
      max-height: 450px;
    }
  }
}

.stripe.red {
  background-color: $red;
  color: white;
}

.stripe.darkblue {
  background-color: $darkblue;
  color: white;

  .heading {
    color: $lightblue;
  }
}

.stripe.blue {
  background-color: $blue;
}

.stripe.lightblue {
  background-color: $lightblue;
}

.stripe.gray {
  background-color: $gray;
}

.stripe.darkgray {
  background-color: $darkgray;
  color: white;
}

#testimonials {
  .carousel-item {
    min-height: 350px;
    padding-top: 70px;
    position: relative;

    .carousel-caption {
      position: static;
      max-width: 620px;
      margin: auto;
      font-family: eurostile, sans-serif;
      font-weight: 300;
      font-size: 25px;
      line-height: 28px;

      h5 {
        font-weight: 600;
        font-size: 25px;
      }
    }
  }

  .carousel-indicators {
    li {
      margin: 15px;
      height: 12px;
      width: 12px;
      border-radius: 6px;
      border: none;
      opacity: 1;
      transition: background-color 200ms;
    }

    li.active {
      background-color: $lightblue;
    }
  }

  @include media-breakpoint-down(sm) {
    .carousel-control-next, .carousel-control-prev {
      align-items: flex-end;
      margin-bottom: 15px;
    }
  }

  @include media-breakpoint-up(sm) {
    .carousel-inner {
      overflow: visible;
    }

    .carousel-item {
      padding-left: 100px;
      padding-right: 100px;
    }

    .carousel-item:before {
      background-image: url("img/quote.png");
      background-repeat: no-repeat;
      background-position: center;
      background-size: contain;
      display: block;
      content: "";
      position: absolute;
      width: 200px;
      height: 120px;
      top: -60px;
    }
  }
}

